--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -23,6 +23,9 @@ jobs:
           java-version: 21
 
       # 3. Gradle로 JAR 빌드
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      
       - name: Build Spring Boot JAR
         run: ./gradlew bootJar --no-daemon
 
