--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -21,11 +21,12 @@ jobs:
         with:
           distribution: temurin
           java-version: 21
+          cache: 'gradle'
 
       # 3. Gradle로 JAR 빌드
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-      
+
       - name: Build Spring Boot JAR
         run: ./gradlew bootJar --no-daemon
 
@@ -34,11 +35,13 @@ jobs:
         run: docker build -t myapp .
 
       # 5. DockerHub 로그인 & Push
-      - name: Push Docker image to DockerHub
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
+      - name: Tag and Push Docker image
         run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker tag myapp mydockerhubuser/myapp:latest
-          docker push mydockerhubuser/myapp:latest
+          docker tag myapp ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
 
       # 6. EC2 접속 후 컨테이너 실행
       - name: Deploy to EC2
@@ -48,7 +51,7 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_KEY }}
           script: |
-            docker tag myapp ${{ secrets.DOCKER_USERNAME }}/myapp:latest
-            docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
             docker pull ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+            docker stop myapp || true
+            docker rm myapp || true
             docker run -d --name myapp -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/myapp:latest
